<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/my_profile"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/photoProfile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/my_photo"
        android:layout_gravity="center_horizontal"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/nimProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="310dp"
        android:text="@string/nim"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/namaProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="340dp"
        android:text="@string/nama"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/kelasProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="370dp"
        android:text="@string/kelas"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/emailProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="400dp"
        android:text="@string/email"
        android:textSize="20sp"/>
</FrameLayout>